--- a/app/style/style.css
+++ b/app/style/style.css
@@ -31,7 +31,6 @@ body {
     color: #4d4959;
     letter-spacing: 3px;
     margin: 0 40px;
-    min-width: max-content;
     text-decoration: none; }
     .menu__link:hover {
       color: #64c29e;
@@ -229,15 +228,8 @@ body {
         opacity: 1;
         cursor: pointer;
         transition: opacity 400ms ease; }
-      .gallery__items .item--hover:after {
-        position: absolute;
-        content: '';
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        opacity: 0;
-        z-index: -1; }
+      .gallery__items .item--hover__img {
+        width: 51px; }
   .gallery .gallery__items:first-child {
     display: flex;
     flex-wrap: wrap; }
@@ -352,6 +344,8 @@ body {
     color: #848789; }
     .footer .address__link:hover {
       opacity: .5; }
+  .footer .address .address__link:hover {
+    transition: opacity .5s ease; }
   .footer .social-icons {
     display: flex; }
     .footer .social-icons__link {
@@ -484,6 +478,7 @@ body {
     transition: all .3s ease-in-out; }
   .menu.open {
     margin: 0;
+    padding: 20px;
     width: 100%;
     height: auto;
     position: fixed;
@@ -562,7 +557,7 @@ body {
   .generation-info__items:last-child .image-container {
     padding: 80px 0; }
   .contact {
-    padding: 10px 10px; }
+    padding: 10px; }
     .contact .contact-info {
       padding: 127px 10px; }
   .contact-with-us__input {
@@ -596,4 +591,4 @@ body {
   .discover__button {
     padding: 16px 30px; }
   .contact {
-    padding: 10px 10px; } }
+    padding: 10px; } }
